--- a/index.html
+++ b/index.html
@@ -36,6 +36,34 @@
   </div>
 </div>
 
+<section id="services">
+  <h2 style="text-align:center; margin-bottom:40px;">
+    Our <span style="color:#f5bb1f;">Services</span>
+  </h2>
+
+  <div class="grid">
+    <div class="card">
+      <h3>Logo Design</h3>
+      <p>Memorable, scalable logos that define your brand identity.</p>
+    </div>
+
+    <div class="card">
+      <h3>Branding & Identity</h3>
+      <p>Complete brand systems that create trust and recognition.</p>
+    </div>
+
+    <div class="card">
+      <h3>Social Media Creatives</h3>
+      <p>High-conversion posts, ads & reels for modern platforms.</p>
+    </div>
+
+    <div class="card">
+      <h3>Marketing Graphics</h3>
+      <p>Designs that support campaigns, promotions, and growth.</p>
+    </div>
+  </div>
+</section>
+
 <section>
   <h2>Our Services</h2>
   <div class="grid">
@@ -47,7 +75,7 @@
 </section>
 
 <footer>
-  © 2026 GraphixTrade.com
+  © 2026 GraphixTrade.com all rights reserved.
 </footer>
 
 <script src="assets/js/main.js"></script>
