--- a/index.html
+++ b/index.html
@@ -64,6 +64,34 @@
   </div>
 </section>
 
+<section id="portfolio">
+  <h2 style="text-align:center; margin-bottom:40px;">
+    Our <span style="color:#f5bb1f;">Work</span>
+  </h2>
+
+  <div class="grid">
+    <div class="card">
+      <img src="assets/images/portfolio1.jpg" alt="Brand Design Project" style="width:100%; border-radius:12px;">
+      <h3 style="margin-top:15px;">Brand Identity</h3>
+    </div>
+
+    <div class="card">
+      <img src="assets/images/portfolio2.jpg" alt="Packaging Design" style="width:100%; border-radius:12px;">
+      <h3 style="margin-top:15px;">Packaging Design</h3>
+    </div>
+
+    <div class="card">
+      <img src="assets/images/portfolio3.jpg" alt="Social Media Design" style="width:100%; border-radius:12px;">
+      <h3 style="margin-top:15px;">Social Media Creatives</h3>
+    </div>
+
+    <div class="card">
+      <img src="assets/images/portfolio4.jpg" alt="Marketing Graphics" style="width:100%; border-radius:12px;">
+      <h3 style="margin-top:15px;">Marketing Graphics</h3>
+    </div>
+  </div>
+</section>
+
 <section>
   <h2>Our Services</h2>
   <div class="grid">
