--- a/index.html
+++ b/index.html
@@ -92,6 +92,29 @@
   </div>
 </section>
 
+<section id="why-us">
+  <h2 style="text-align:center; margin-bottom:40px;">
+    Why <span style="color:#f5bb1f;">GraphixTrade</span>
+  </h2>
+
+  <div class="grid">
+    <div class="card">
+      <h3>Creative & Strategic</h3>
+      <p>We design with purpose — every visual supports your brand and business goals.</p>
+    </div>
+
+    <div class="card">
+      <h3>Fast Turnaround</h3>
+      <p>Quick delivery without compromising on creativity or quality.</p>
+    </div>
+
+    <div class="card">
+      <h3>Client-First Approach</h3>
+      <p>Your vision matters. We collaborate closely to deliver designs you love.</p>
+    </div>
+  </div>
+</section>
+
 <section>
   <h2>Our Services</h2>
   <div class="grid">
