--- a/index.html
+++ b/index.html
@@ -115,6 +115,24 @@
   </div>
 </section>
 
+<section id="cta" style="text-align:center;">
+  <h2 style="font-size:42px; margin-bottom:20px;">
+    Ready to Build a <span style="color:#f5bb1f;">Bold Brand?</span>
+  </h2>
+
+  <p style="max-width:700px; margin:0 auto 40px; font-size:18px; opacity:0.85;">
+    Let’s turn your ideas into powerful designs that attract clients and grow your business.
+  </p>
+
+  <a href="https://wa.me/YOURNUMBER" class="btn" style="margin-right:15px;">
+    WhatsApp Now
+  </a>
+
+  <a href="#contact" class="btn" style="background:#df053b; color:#fff;">
+    Get a Quote
+  </a>
+</section>
+
 <section>
   <h2>Our Services</h2>
   <div class="grid">
