--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     Let’s turn your ideas into powerful designs that attract clients and grow your business.
   </p>
 
-  <a href="https://wa.me/YOURNUMBER" class="btn" style="margin-right:15px;">
+  <a href="https://wa.me/8982548698" class="btn" style="margin-right:15px;">
     WhatsApp Now
   </a>
 
