--- a/index.html
+++ b/index.html
@@ -133,29 +133,25 @@
   </a>
 </section>
 
-<section>
-  <h2>Our Services</h2>
-  <div class="grid">
-    <div class="card">Packaging Design</div>
-    <div class="card">Logo Design</div>
-    <div class="card">Social Media Creatives</div>
-    <div class="card">Marketing Graphics</div>
-  </div>
-</section>
-
 <footer>
-  © 2026 GraphixTrade.com all rights reserved.
+  <div style="max-width:1200px; margin:auto; padding:20px;">
+
+    <h3 style="margin-bottom:10px;">GraphixTrade</h3>
+
+    <p style="opacity:0.7; margin-bottom:20px;">
+      Creative Graphic Design Agency building bold brands that get clients.
+    </p>
+
+    <div style="margin-bottom:15px;">
+      <a href="index.html" style="margin:0 10px; color:#fff;">Home</a>
+      <a href="#services" style="margin:0 10px; color:#fff;">Services</a>
+      <a href="#portfolio" style="margin:0 10px; color:#fff;">Portfolio</a>
+      <a href="#contact" style="margin:0 10px; color:#fff;">Contact</a>
+    </div>
+
+    <p style="opacity:0.5;">
+      © 2026 GraphixTrade. All rights reserved.
+    </p>
+
+  </div>
 </footer>
-
-<script src="assets/js/main.js"></script>
-
-<script>
-  function toggleMenu() {
-    document.querySelector('.nav-links').classList.toggle('active');
-  }
-</script>
-
-</body>
-</html>
-
-
