--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
+<a href="https://wa.me/8982548698" class="whatsapp-float" target="_blank">
+  💬
+</a>
+
 <body>
 
 <header>
