--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<a href="https://wa.me/8982548698" class="whatsapp-float" target="_blank">
-  💬
-</a>
-
 <body>
 
 <header>
@@ -159,3 +155,11 @@
 
   </div>
 </footer>
+
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank">
+  💬
+</a>
+
+</body>
+</html>
