--- a/index.html
+++ b/index.html
@@ -161,5 +161,11 @@
   💬
 </a>
 
+<script>
+  function toggleMenu() {
+    document.querySelector('.nav-links').classList.toggle('active');
+  }
+</script>
+
 </body>
 </html>
