--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 </footer>
 
 <!-- WhatsApp Floating Button -->
-<a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank">
-  💬
+<a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
 </a>
 
 <script>
