--- a/index.html
+++ b/index.html
@@ -161,11 +161,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
 </a>
 
-<script>
-  function toggleMenu() {
-    document.querySelector('.nav-links').classList.toggle('active');
-  }
-</script>
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
