--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <span class="brand-name">GraphixTrade</span>
     </div>
 
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <div class="menu-toggle">☰</div>
 
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
