--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>GraphixTrade | Creative Graphic Design Agency</title>
+  <meta name="description" content="GraphixTrade is a creative graphic design agency offering logo design, branding, social media creatives and marketing graphics.">
+  <meta name="keywords" content="graphic design agency, logo design, branding, social media creatives, GraphixTrade">
+  <meta name="author" content="GraphixTrade">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
