--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
+<!-- ================= HEADER ================= -->
 <header>
   <div class="nav">
     <div class="brand">
@@ -15,8 +17,10 @@
       <span class="brand-name">GraphixTrade</span>
     </div>
 
+    <!-- Hamburger -->
     <div class="menu-toggle" id="mobile-menu">☰</div>
 
+    <!-- Navigation -->
     <ul class="nav-links" id="main-nav">
       <li><a href="#home">Home</a></li>
       <li><a href="#services">Services</a></li>
@@ -26,20 +30,55 @@
   </div>
 </header>
 
-<footer>
-  <div class="footer-container">
-    <h3>GraphixTrade</h3>
-    <p>Creative Graphic Design Agency building bold brands that get clients.</p>
-    <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Contact</a>
-    </div>
-    <p class="copyright">© 2026 GraphixTrade. All rights reserved.</p>
+<!-- ================= HERO ================= -->
+<section id="home" class="hero">
+  <div>
+    <h1>We Design <span>Bold Brands</span><br>That Get Clients</h1>
+    <a href="#portfolio" class="btn">View Portfolio</a>
   </div>
+</section>
+
+<!-- ================= SERVICES ================= -->
+<section id="services">
+  <h2>Our <span>Services</span></h2>
+
+  <div class="grid">
+    <div class="card">Logo Design</div>
+    <div class="card">Brand Identity</div>
+    <div class="card">Social Media Creatives</div>
+    <div class="card">Marketing Graphics</div>
+  </div>
+</section>
+
+<!-- ================= PORTFOLIO ================= -->
+<section id="portfolio">
+  <h2>Our <span>Work</span></h2>
+
+  <div class="grid">
+    <div class="card">Project 1</div>
+    <div class="card">Project 2</div>
+    <div class="card">Project 3</div>
+  </div>
+</section>
+
+<!-- ================= CONTACT ================= -->
+<section id="contact">
+  <h2>Contact <span>Us</span></h2>
+
+  <form class="contact-form">
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <textarea placeholder="Your Message" required></textarea>
+    <button class="btn">Send Message</button>
+  </form>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <p>© 2026 GraphixTrade. All rights reserved.</p>
 </footer>
 
+<!-- ================= WHATSAPP BUTTON ================= -->
 <a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
 </a>
