--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- ================= HERO ================= -->
 <section id="home" class="hero">
   <div>
-    <h1>We Design <span>Bold Brands</span><br>That Get Clients</h1>
+    <h1>We Build <span>Powerful Brands</span><br>Through Creative Designs</h1>
     <a href="#portfolio" class="btn">View Portfolio</a>
   </div>
 </section>
@@ -44,7 +44,7 @@
 
   <div class="grid">
     <div class="card">Logo Design</div>
-    <div class="card">Brand Identity</div>
+    <div class="card">Packaging Design</div>
     <div class="card">Social Media Creatives</div>
     <div class="card">Marketing Graphics</div>
   </div>
