--- a/index.html
+++ b/index.html
@@ -50,6 +50,46 @@
   </div>
 </section>
 
+<section id="why-us">
+  <h2 class="section-title">
+    Why <span>Choose GraphixTrade</span>
+  </h2>
+
+  <div class="grid">
+    <div class="card why-card">
+      <h3>Creative Thinking</h3>
+      <p>
+        We don’t just design — we think strategically to build brands that
+        attract, connect, and convert customers.
+      </p>
+    </div>
+
+    <div class="card why-card">
+      <h3>Fast & Reliable</h3>
+      <p>
+        Quick turnaround times without compromising design quality or
+        attention to detail.
+      </p>
+    </div>
+
+    <div class="card why-card">
+      <h3>Client-First Approach</h3>
+      <p>
+        Your ideas matter. We collaborate closely to deliver designs aligned
+        with your business goals.
+      </p>
+    </div>
+
+    <div class="card why-card">
+      <h3>Modern Design Standards</h3>
+      <p>
+        We follow the latest design trends and UX principles to keep your brand
+        competitive and professional.
+      </p>
+    </div>
+  </div>
+</section>
+
 <!-- ================= PORTFOLIO ================= -->
 <section id="portfolio">
   <h2>Our <span>Work</span></h2>
