--- a/index.html
+++ b/index.html
@@ -92,12 +92,44 @@
 
 <!-- ================= PORTFOLIO ================= -->
 <section id="portfolio">
-  <h2>Our <span>Work</span></h2>
+  <h2 class="section-title">
+    Our <span>Portfolio</span>
+  </h2>
 
-  <div class="grid">
-    <div class="card">Project 1</div>
-    <div class="card">Project 2</div>
-    <div class="card">Project 3</div>
+  <div class="grid portfolio-grid">
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio1.jpg" alt="Brand Design">
+      <div class="portfolio-overlay">
+        <h3>Brand Identity</h3>
+        <p>Logo & Brand Design</p>
+      </div>
+    </div>
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio2.jpg" alt="Social Media Design">
+      <div class="portfolio-overlay">
+        <h3>Social Media Creatives</h3>
+        <p>Instagram & Ads</p>
+      </div>
+    </div>
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio3.jpg" alt="Poster Design">
+      <div class="portfolio-overlay">
+        <h3>Marketing Posters</h3>
+        <p>Print & Digital</p>
+      </div>
+    </div>
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio4.jpg" alt="Web Design">
+      <div class="portfolio-overlay">
+        <h3>Website Design</h3>
+        <p>UI / UX Design</p>
+      </div>
+    </div>
+
   </div>
 </section>
 
