--- a/index.html
+++ b/index.html
@@ -99,7 +99,48 @@
   <div class="grid portfolio-grid">
 
     <div class="portfolio-card">
-      <img src="assets/images/portfolio1.jpg" alt="Brand Design">
+      <img src="<section id="portfolio">
+  <h2 class="section-title">
+    Our <span>Portfolio</span>
+  </h2>
+
+  <div class="grid portfolio-grid">
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio1.jpg.jpeg" alt="Brand Design">
+      <div class="portfolio-overlay">
+        <h3>Brand Identity</h3>
+        <p>Logo & Brand Design</p>
+      </div>
+    </div>
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio2.jpg.jpeg" alt="Social Media Design">
+      <div class="portfolio-overlay">
+        <h3>Social Media Creatives</h3>
+        <p>Instagram & Ads</p>
+      </div>
+    </div>
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio3.jpg.jpg" alt="Poster Design">
+      <div class="portfolio-overlay">
+        <h3>Marketing Posters</h3>
+        <p>Print & Digital</p>
+      </div>
+    </div>
+
+    <div class="portfolio-card">
+      <img src="assets/images/portfolio4.jpg.jpg" alt="Web Design">
+      <div class="portfolio-overlay">
+        <h3>Website Design</h3>
+        <p>UI / UX Design</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+" alt="Brand Design">
       <div class="portfolio-overlay">
         <h3>Brand Identity</h3>
         <p>Logo & Brand Design</p>
