--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>GraphixTrade | Creative Graphic Design Agency</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="GraphixTrade is a creative design agency offering branding, logo design, social media creatives, UI/UX and 3D design.">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -17,15 +18,15 @@
       <span class="brand-name">GraphixTrade</span>
     </div>
 
-    <!-- Hamburger -->
     <div class="menu-toggle" id="mobile-menu">☰</div>
 
-    <!-- Navigation -->
     <ul class="nav-links" id="main-nav">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="models.html">3D Models</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 </header>
@@ -33,8 +34,16 @@
 <!-- ================= HERO ================= -->
 <section id="home" class="hero">
   <div>
-    <h1>We Build <span>Powerful Brands</span><br>Through Creative Designs</h1>
-    <a href="#portfolio" class="btn">View Portfolio</a>
+    <h1>
+      We Create <span>Bold Visual Experiences</span><br>
+      That Build Brands & Drive Sales
+    </h1>
+    <p style="max-width:700px;margin:20px auto;opacity:.85;">
+      From branding and social media creatives to UI design and 3D models,
+      GraphixTrade helps businesses stand out in a competitive digital world.
+    </p>
+
+    <a href="portfolio.html" class="btn">View Our Work</a>
   </div>
 </section>
 
@@ -43,140 +52,141 @@
   <h2>Our <span>Services</span></h2>
 
   <div class="grid">
-    <div class="card">Logo Design</div>
-    <div class="card">Packaging Design</div>
-    <div class="card">Social Media Creatives</div>
-    <div class="card">Marketing Graphics</div>
+    <div class="card">
+      <h3>Logo & Branding</h3>
+      <p>
+        Strong brand identities that communicate trust,
+        professionalism and uniqueness.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Social Media Creatives</h3>
+      <p>
+        Scroll-stopping posts, ads and campaigns
+        designed for engagement and conversions.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>UI / Website Design</h3>
+      <p>
+        Clean, modern and user-focused designs
+        that improve user experience.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>3D Modeling</h3>
+      <p>
+        High-quality 3D models for products,
+        games, visualization and marketplaces.
+      </p>
+    </div>
   </div>
 </section>
 
+<!-- ================= WHY CHOOSE US ================= -->
 <section id="why-us">
-  <h2 class="section-title">
-    Why <span>Choose GraphixTrade</span>
-  </h2>
+  <h2>Why <span>Choose GraphixTrade</span></h2>
 
   <div class="grid">
     <div class="card why-card">
-      <h3>Creative Thinking</h3>
+      <h3>Creative + Strategic</h3>
       <p>
-        We don’t just design — we think strategically to build brands that
-        attract, connect, and convert customers.
+        We don’t just design visuals.
+        We create solutions that support your business goals.
       </p>
     </div>
 
     <div class="card why-card">
-      <h3>Fast & Reliable</h3>
+      <h3>Fast Turnaround</h3>
       <p>
-        Quick turnaround times without compromising design quality or
-        attention to detail.
+        Timely delivery without compromising
+        creativity or quality.
       </p>
     </div>
 
     <div class="card why-card">
-      <h3>Client-First Approach</h3>
+      <h3>Client-Focused</h3>
       <p>
-        Your ideas matter. We collaborate closely to deliver designs aligned
-        with your business goals.
+        Your vision matters.
+        We collaborate closely at every step.
       </p>
     </div>
 
     <div class="card why-card">
-      <h3>Modern Design Standards</h3>
+      <h3>Modern Standards</h3>
       <p>
-        We follow the latest design trends and UX principles to keep your brand
-        competitive and professional.
+        Designs built using current trends,
+        UX principles and platform requirements.
       </p>
     </div>
   </div>
 </section>
 
-<!-- ================= PORTFOLIO ================= -->
+<!-- ================= PORTFOLIO PREVIEW ================= -->
 <section id="portfolio">
-  <h2 class="section-title">
-    Our <span>Portfolio</span>
-  </h2>
+  <h2>Featured <span>Work</span></h2>
 
   <div class="grid portfolio-grid">
-
     <div class="portfolio-card">
-      <img src="<section id="portfolio">
-  <h2 class="section-title">
-    Our <span>Portfolio</span>
-  </h2>
-
-  <div class="grid portfolio-grid">
-
-    <div class="portfolio-card">
-      <img src="assets/images/portfolio1.jpg.jpeg" alt="Brand Design">
+      <img src="assets/images/portfolio/portfolio1.jpg" alt="Brand Identity">
       <div class="portfolio-overlay">
         <h3>Brand Identity</h3>
-        <p>Logo & Brand Design</p>
+        <p>Logo & Branding</p>
       </div>
     </div>
 
     <div class="portfolio-card">
-      <img src="assets/images/portfolio2.jpg.jpeg" alt="Social Media Design">
+      <img src="assets/images/portfolio/portfolio2.jpg" alt="Social Media">
       <div class="portfolio-overlay">
-        <h3>Social Media Creatives</h3>
+        <h3>Social Media Design</h3>
         <p>Instagram & Ads</p>
       </div>
     </div>
 
     <div class="portfolio-card">
-      <img src="assets/images/portfolio3.jpg.jpg" alt="Poster Design">
+      <img src="assets/images/portfolio/portfolio3.jpg" alt="UI Design">
       <div class="portfolio-overlay">
-        <h3>Marketing Posters</h3>
-        <p>Print & Digital</p>
+        <h3>Website UI</h3>
+        <p>UX / UI Design</p>
       </div>
     </div>
 
     <div class="portfolio-card">
-      <img src="assets/images/portfolio4.jpg.jpg" alt="Web Design">
+      <img src="assets/images/portfolio/portfolio4.jpg" alt="3D Model">
       <div class="portfolio-overlay">
-        <h3>Website Design</h3>
-        <p>UI / UX Design</p>
+        <h3>3D Modeling</h3>
+        <p>Product Visualization</p>
       </div>
     </div>
-
   </div>
-</section>
-" alt="Brand Design">
-      <div class="portfolio-overlay">
-        <h3>Brand Identity</h3>
-        <p>Logo & Brand Design</p>
-      </div>
-    </div>
 
-    <div class="portfolio-card">
-      <img src="assets/images/portfolio2.jpg" alt="Social Media Design">
-      <div class="portfolio-overlay">
-        <h3>Social Media Creatives</h3>
-        <p>Instagram & Ads</p>
-      </div>
-    </div>
-
-    <div class="portfolio-card">
-      <img src="assets/images/portfolio3.jpg" alt="Poster Design">
-      <div class="portfolio-overlay">
-        <h3>Marketing Posters</h3>
-        <p>Print & Digital</p>
-      </div>
-    </div>
-
-    <div class="portfolio-card">
-      <img src="assets/images/portfolio4.jpg" alt="Web Design">
-      <div class="portfolio-overlay">
-        <h3>Website Design</h3>
-        <p>UI / UX Design</p>
-      </div>
-    </div>
-
-  </div>
+  <a href="portfolio.html" class="btn" style="margin-top:40px;">
+    View Full Portfolio
+  </a>
 </section>
 
-<!-- ================= CONTACT ================= -->
+<!-- ================= CTA ================= -->
+<section id="cta">
+  <h2>
+    Ready to Build a <span>Powerful Brand?</span>
+  </h2>
+
+  <p style="max-width:700px;margin:20px auto;opacity:.85;">
+    Let’s transform your ideas into designs that
+    attract attention and generate results.
+  </p>
+
+  <a href="https://wa.me/918982548698" class="btn">
+    Chat on WhatsApp
+  </a>
+</section>
+
+<!-- ================= CONTACT PREVIEW ================= -->
 <section id="contact">
-  <h2>Contact <span>Us</span></h2>
+  <h2>Get in <span>Touch</span></h2>
 
   <form class="contact-form">
     <input type="text" placeholder="Your Name" required>
@@ -188,11 +198,16 @@
 
 <!-- ================= FOOTER ================= -->
 <footer>
-  <p>© 2026 GraphixTrade. All rights reserved.</p>
+  <p>
+    © 2026 GraphixTrade. All rights reserved.
+  </p>
 </footer>
 
-<!-- ================= WHATSAPP BUTTON ================= -->
-<a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank">
+<!-- ================= WHATSAPP FLOAT ================= -->
+<a href="https://wa.me/918982548698"
+   class="whatsapp-float"
+   target="_blank"
+   aria-label="Chat on WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
 </a>
 
