--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,155 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio | GraphixTrade</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Explore our design portfolio including branding, social media, UI design, 3D modeling and more.">
+
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+
+<!-- ================= HEADER ================= -->
+<header>
+  <div class="nav">
+    <div class="brand">
+      <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
+      <span class="brand-name">GraphixTrade</span>
+    </div>
+
+    <div class="menu-toggle" id="mobile-menu">☰</div>
+
+    <ul class="nav-links" id="main-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="models.html">3D Models</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</header>
+
+<!-- ================= PAGE HERO ================= -->
+<section class="hero" style="height:60vh;">
+  <div>
+    <h1>
+      Our <span>Creative Portfolio</span>
+    </h1>
+    <p style="max-width:700px;margin:20px auto;opacity:.85;">
+      A showcase of our best work across branding, social media,
+      UI/UX design, 3D modeling and digital products.
+    </p>
+  </div>
+</section>
+
+<!-- ================= PORTFOLIO SECTION ================= -->
+<section class="portfolio-page">
+
+  <!-- ===== BRANDING ===== -->
+  <div class="portfolio-category">
+    <h2>Logo & <span>Branding</span></h2>
+    <p class="category-desc">
+      Strong brand identities crafted to build trust and recognition.
+    </p>
+
+    <div class="grid portfolio-grid">
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/branding1.jpg" alt="Branding Project">
+        <div class="portfolio-overlay">
+          <h3>Brand Identity</h3>
+          <p>₹4,999</p>
+          <small>Designer: Pankaj</small>
+        </div>
+      </div>
+
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/branding2.jpg" alt="Logo Design">
+        <div class="portfolio-overlay">
+          <h3>Logo Design</h3>
+          <p>₹2,499</p>
+          <small>Designer: Pankaj</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ===== SOCIAL MEDIA ===== -->
+  <div class="portfolio-category">
+    <h2>Social Media <span>Design</span></h2>
+    <p class="category-desc">
+      High-engagement creatives for Instagram, Facebook & Ads.
+    </p>
+
+    <div class="grid portfolio-grid">
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/social1.jpg" alt="Instagram Post">
+        <div class="portfolio-overlay">
+          <h3>Instagram Creatives</h3>
+          <p>₹999 / post</p>
+          <small>Designer: Pankaj</small>
+        </div>
+      </div>
+
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/social2.jpg" alt="Ad Banner">
+        <div class="portfolio-overlay">
+          <h3>Ad Banner</h3>
+          <p>₹1,499</p>
+          <small>Designer: Pankaj</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ===== UI DESIGN ===== -->
+  <div class="portfolio-category">
+    <h2>UI / <span>Website Design</span></h2>
+    <p class="category-desc">
+      Clean, modern user-focused interface designs.
+    </p>
+
+    <div class="grid portfolio-grid">
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/ui1.jpg" alt="Website UI">
+        <div class="portfolio-overlay">
+          <h3>Website UI</h3>
+          <p>₹7,999</p>
+          <small>Designer: Pankaj</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ===== 3D MODELS ===== -->
+  <div class="portfolio-category">
+    <h2>3D <span>Modeling</span></h2>
+    <p class="category-desc">
+      High-quality 3D models for visualization & marketplaces.
+    </p>
+
+    <div class="grid portfolio-grid">
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/3d1.jpg" alt="3D Model">
+        <div class="portfolio-overlay">
+          <h3>Product 3D Model</h3>
+          <p>₹3,999</p>
+          <a href="#" class="btn" style="margin-top:10px;">View on Sketchfab</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <p>© 2026 GraphixTrade. All rights reserved.</p>
+</footer>
+
+<script src="assets/js/main.js"></script>
+</body>
+</html>
 
