--- a/services.html
+++ b/services.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Services | GraphixTrade</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Graphic design, branding, UI/UX, social media creatives, and 3D modeling services by GraphixTrade.">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+
+<!-- ================= HEADER (SAME AS HOME) ================= -->
+<header>
+  <div class="nav">
+    <div class="brand">
+      <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
+      <span class="brand-name">GraphixTrade</span>
+    </div>
+
+    <div class="menu-toggle" id="mobile-menu">☰</div>
+
+    <ul class="nav-links" id="main-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html" class="active">Services</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="models.html">3D Models</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</header>
+
+<!-- ================= SERVICES HERO ================= -->
+<section class="hero" style="height:70vh;">
+  <div>
+    <h1>
+      Our <span>Creative Services</span>
+    </h1>
+    <p style="max-width:700px;margin:20px auto;opacity:.85;">
+      Design solutions crafted to build brands, boost engagement,
+      and increase sales across digital platforms.
+    </p>
+  </div>
+</section>
+
+<!-- ================= SERVICES LIST ================= -->
+<section>
+  <h2>What We <span>Offer</span></h2>
+
+  <div class="grid">
+
+    <div class="card">
+      <h3>🎨 Logo & Branding</h3>
+      <p>
+        Professional logo design, brand identity systems,
+        and visual guidelines for strong brand presence.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>📱 Social Media Design</h3>
+      <p>
+        Eye-catching Instagram posts, ads,
+        banners and marketing creatives.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>💻 UI / Website Design</h3>
+      <p>
+        Modern, responsive UI designs focused on
+        user experience and conversion.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>📦 Packaging Design</h3>
+      <p>
+        Attractive product packaging designs
+        that stand out on shelves and marketplaces.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>🛒 E-commerce Creatives</h3>
+      <p>
+        Amazon, Flipkart & Meesho product listing
+        images that boost clicks and sales.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>🧊 3D Modeling</h3>
+      <p>
+        High-quality 3D models for products,
+        visualization, games and marketplaces.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!-- ================= PRICING ================= -->
+<section style="background:#050505;">
+  <h2>Simple <span>Pricing</span></h2>
+
+  <div class="grid">
+
+    <div class="card">
+      <h3>Starter</h3>
+      <p style="font-size:28px;color:var(--gold);margin:15px 0;">₹999</p>
+      <p>Logo or Single Creative</p>
+      <p>2 Revisions</p>
+      <p>Fast Delivery</p>
+    </div>
+
+    <div class="card" style="border:1px solid var(--gold);">
+      <h3>Business</h3>
+      <p style="font-size:28px;color:var(--gold);margin:15px 0;">₹4,999</p>
+      <p>Branding / Social Pack</p>
+      <p>Multiple Creatives</p>
+      <p>Priority Support</p>
+    </div>
+
+    <div class="card">
+      <h3>Premium</h3>
+      <p style="font-size:28px;color:var(--gold);margin:15px 0;">Custom</p>
+      <p>UI / Website / 3D</p>
+      <p>Unlimited Revisions</p>
+      <p>Dedicated Support</p>
+    </div>
+
+  </div>
+</section>
+
+<!-- ================= CTA ================= -->
+<section>
+  <h2>Need a <span>Custom Quote?</span></h2>
+  <p style="max-width:650px;margin:20px auto;opacity:.85;">
+    Tell us about your project and we’ll create
+    a solution tailored to your needs.
+  </p>
+  <a href="https://wa.me/918982548698" class="btn">Chat on WhatsApp</a>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <p>© 2026 GraphixTrade. All rights reserved.</p>
+</footer>
+
+<!-- ================= WHATSAPP FLOAT ================= -->
+<a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+</a>
+
+<script src="assets/js/main.js"></script>
+</body>
+</html>
 
