--- a/portfolio.html
+++ b/portfolio.html
@@ -114,4 +114,77 @@
     <div class="grid portfolio-grid">
       <div class="portfolio-card">
         <img src="assets/images/portfolio/pack1.jpg" alt="Packaging Design">
-        <div cla
+        <div class="portfolio-overlay">
+          <h3>Product Package</h3>
+          <p>₹3,999</p>
+          <small>Designed by GraphixTrade</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ================= UI / WEBSITE ================= -->
+  <div class="portfolio-category">
+    <h2>UI / <span>Website Design</span></h2>
+    <p class="category-desc">
+      Clean, modern UI designs focused
+      on user experience and usability.
+    </p>
+
+    <div class="grid portfolio-grid">
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/ui1.jpg" alt="Website UI">
+        <div class="portfolio-overlay">
+          <h3>Website UI</h3>
+          <p>₹6,999+</p>
+          <small>Designed by GraphixTrade</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ================= ECOMMERCE ================= -->
+  <div class="portfolio-category">
+    <h2>E-commerce <span>Listing Design</span></h2>
+    <p class="category-desc">
+      Product listing images optimized
+      for Amazon, Flipkart & Meesho.
+    </p>
+
+    <div class="grid portfolio-grid">
+      <div class="portfolio-card">
+        <img src="assets/images/portfolio/ecom1.jpg" alt="Product Listing">
+        <div class="portfolio-overlay">
+          <h3>Product Listing</h3>
+          <p>₹1,499</p>
+          <small>Designed by GraphixTrade</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- ================= CTA ================= -->
+<section>
+  <h2>Want Designs Like <span>These?</span></h2>
+  <p style="max-width:700px;margin:20px auto;opacity:.85;">
+    Let’s discuss your project and bring
+    your ideas to life with stunning visuals.
+  </p>
+  <a href="https://wa.me/918982548698" class="btn">Start a Project</a>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <p>© 2026 GraphixTrade. All rights reserved.</p>
+</footer>
+
+<!-- ================= WHATSAPP ================= -->
+<a href="https://wa.me/918982548698" class="whatsapp-float" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+</a>
+
+<script src="assets/js/main.js"></script>
+</body>
+</html>
