--- a/products.html
+++ b/products.html
@@ -1,1 +1,105 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Products | GraphixTrade</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Buy digital and physical creative products from GraphixTrade.">
 
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+
+<!-- ================= HEADER ================= -->
+<header>
+  <div class="nav">
+    <div class="brand">
+      <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
+      <span class="brand-name">GraphixTrade</span>
+    </div>
+
+    <div class="menu-toggle" id="mobile-menu">☰</div>
+
+    <ul class="nav-links" id="main-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="products.html" class="active">Products</a></li>
+      <li><a href="models.html">3D Models</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</header>
+
+<!-- ================= PAGE HERO ================= -->
+<section class="page-hero">
+  <h1>Our <span>Products</span></h1>
+  <p>
+    Professionally designed digital & physical products.
+    High quality, ready to use, and affordable.
+  </p>
+</section>
+
+<!-- ================= PRODUCTS ================= -->
+<section class="products">
+
+  <!-- PRODUCT CARD -->
+  <div class="product-card">
+    <div class="product-slider">
+      <img src="assets/images/products/product1-1.jpg" class="active">
+      <img src="assets/images/products/product1-2.jpg">
+      <img src="assets/images/products/product1-3.jpg">
+
+      <button class="slide-btn prev">‹</button>
+      <button class="slide-btn next">›</button>
+    </div>
+
+    <h3>Social Media Post Bundle</h3>
+    <p class="price">₹299</p>
+
+    <p class="desc">
+      Ready-made Instagram & Facebook post designs.
+      Fully editable and professionally designed.
+    </p>
+
+    <a href="https://www.meesho.com/" target="_blank" class="btn buy-btn">
+      Buy on Meesho
+    </a>
+  </div>
+
+  <!-- PRODUCT CARD -->
+  <div class="product-card">
+    <div class="product-slider">
+      <img src="assets/images/products/product2-1.jpg" class="active">
+      <img src="assets/images/products/product2-2.jpg">
+
+      <button class="slide-btn prev">‹</button>
+      <button class="slide-btn next">›</button>
+    </div>
+
+    <h3>Business Flyer Design</h3>
+    <p class="price">₹199</p>
+
+    <p class="desc">
+      Modern flyer design suitable for print & digital use.
+      Perfect for promotions and ads.
+    </p>
+
+    <a href="https://www.meesho.com/" target="_blank" class="btn buy-btn">
+      Buy on Meesho
+    </a>
+  </div>
+
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <p>© 2026 GraphixTrade. All rights reserved.</p>
+</footer>
+
+<script src="assets/js/main.js"></script>
+<script src="assets/js/products.js"></script>
+</body>
+</html>
